# DIT638-Cyber-Physical-Systems-and-Systems-of-Systems

./: .gitignore  .gitlab-ci.yml  .gitmessage  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  code-of-conduct.md  codereview.md  pre-commit-runner  pre-commit-template  project-starter
assets/templates/: CMakeLists.txt  Pipe.cpp  Pipe.hpp  PrimeChecker.cpp  PrimeChecker.hpp  TestPrimeChecker.cpp  helloworld.cpp
runners/: application-runner  decoder-runner  open-dlv-runner  submission-application-runner
src/: AngleCalculator.cpp  AngleCalculator.hpp  ColourProcessor.cpp  ColourProcessor.hpp  ContourFinder.cpp  ContourFinder.hpp  DecisionSender.cpp  DecisionSender.hpp  IoStreamHandler.cpp  IoStreamHandler.hpp  NoiseReducer.cpp  NoiseReducer.hpp  Receiver.cpp  Receiver.hpp  Starter.cpp  ViewChanger.cpp  ViewChanger.hpp  cluon-complete-v0.0.127.hpp
src/bash-scripts/: build-and-test  coverage  flawfinder  installer  pdf-creator  pmccabe  scan-build
src/python/: GroundSteeringAngle.py
src/tests/: MainTest.cpp  MathHelper.cpp  MathHelper.hpp  TestAngleCalculator.cpp  TestColourProcessor.cpp  TestContourFinder.cpp  TestDecisionSender.cpp  catch.hpp
